--- a/public/view/home.html
+++ b/public/view/home.html
@@ -21,10 +21,11 @@
                 <input type="text" class="search-input" id="searchBar" placeholder="Pesquisar eventos..." oninput="searchEvents()">
                 <button class="search-btn"><i class="fa fa-search"></i></button>
             </div>
+            <!-- Balance do user-->
             <div class="app-header-right"> 
-                <div id="balance-container" class="mt-3 d-none">
-                    <h3><button type="button" class="fas fa-eye" id="showHideBalance"></button>
-                    Your Balance: $<span id="balance"></span></h3>
+                <button type="button" class="fas fa-eye" id="showHideBalance"></button>
+                <div id="balance-container" class="showBalance">
+                        Your Balance: <span id="cifra">$</span><span id="balance"></span>  
                 </div>
             </div>
             
@@ -45,7 +46,7 @@
                     <i class="fa fa-calendar-days"></i>
                     My Events
                 </a>
-                <a href="#" class="app-sidebar-link">
+                <a href="../view/myWallet.html" class="app-sidebar-link">
                     <i class="fa fa-wallet"></i>
                     My Wallet
                 </a>
@@ -64,9 +65,9 @@
                     <p class="section-title">Eventos Ativos</p>
                     <p class="time" id="currentDate"></p>
                 </header>
-                <div class="row align-items-center">
+                <div id="divTabela">
                     <div class="col">
-                        <table id="tableEvents" class="table">
+                        <table id="tableEvents" class="table" >
                             <thead>
                                 <tr>
                                     <th scope="col" class="text-end">#</th>
@@ -83,10 +84,16 @@
                         </table>
                     </div>
                 </div>
+
+                <div id="noEventsAvaliable" style="display: none;">
+                    <img src="../assets/undraw_blank_canvas_re_2hwy.svg" alt="Canvas em branco">
+                    <span class="emptyMessage">Não Há Eventos Ativos</span>
+                </div>
+
                 <!-- Paginador -->
                 <div class="row justify-content-center">
                     <div class="col-auto">
-                        <nav aria-label="Page navigation">
+                        <nav aria-label="Page navigation" id="paginador">
                             <ul id="ulPaginator" class="pagination pagination-sm">
                                 <!-- Elementos do paginador -->
                             </ul>
@@ -175,9 +182,19 @@
                  if(resEvents.ok){
                     const eventsData = await resEvents.json();
                     console.log(eventsData);  // Verifique a estrutura dos dados
-                    fillTable(eventsData);
+                    if(eventsData.length === 0){
+                        const noEventsAvaliable = document.getElementById('noEventsAvaliable');
+                        noEventsAvaliable.style.display = "flex"
+                        const table = document.getElementById("divTabela");
+                        table.style.display = "none";
+                        const paginator = document.getElementById("paginador");
+                        paginator.style.display = "none";
+                    }else{
+
+                        fillTable(eventsData);
+                        refreshPaginator();
+                    }
                  }
-                 refreshPaginator();
             }catch(error){
 
                 console.error(error);
@@ -289,7 +306,7 @@
                     <td class="event-categorie">${event.CATEGORIES}</td>
                     <td class="event-finish-date">${event.FINISH_DATE}</td>
                     <td class="bet-on-event">
-                        <button>BET</button>
+                        <button onclick="betOnEvent(${event.ID_EVENT})"> BET </button>
                     </td>
                 </tr>`;
             tableEvents.getElementsByTagName('tbody')[0].insertAdjacentHTML('beforeend', eventRow);
@@ -349,21 +366,18 @@
         });
 
         document.getElementById("showHideBalance").addEventListener("click", async event => {
-        const iconElement = document.getElementById("showHideBalance");
-        const buttonElement = document.getElementById("showHideBalance");
-
-        // Verifica o estado atual do ícone
-        if (iconElement.classList.contains("fa-eye")) {
-            // Altera para "olho fechado"
-            iconElement.className = "fas fa-eye-slash";
-            document.getElementById('balance').textContent = `-----`;;
-            buttonElement.prepend(iconElement); // Reinsere o ícone no botão
-        } else {
-            // Altera para "olho aberto"
-            iconElement.className = "fas fa-eye";
-            await setBalance();
-            buttonElement.prepend(iconElement); // Reinsere o ícone no botão
-        }
+            const iconElement = document.getElementById("showHideBalance");
+        
+            // Verifica o estado atual do ícone
+            if (iconElement.classList.contains("fa-eye")) {
+                // Altera para "olho fechado"
+                iconElement.className = "fas fa-eye-slash";
+                document.getElementById('balance').textContent = `-----`;
+            } else {
+                // Altera para "olho aberto"
+                iconElement.className = "fas fa-eye";
+                await setBalance();
+            }
         });
     </script>
 </body>
