--- a/public/view/home.html
+++ b/public/view/home.html
@@ -45,7 +45,7 @@
                     <i class="fa fa-calendar-days"></i>
                     My Events
                 </a>
-                <a href="#" class="app-sidebar-link">
+                <a href="../view/myWallet.html" class="app-sidebar-link">
                     <i class="fa fa-wallet"></i>
                     My Wallet
                 </a>
