--- a/public/view/evaluateNewEvent.html
+++ b/public/view/evaluateNewEvent.html
@@ -12,15 +12,14 @@
 </head>
 <body>
     <div class="app-container">
+        <div class="loader-container" id="loader-container">
+            <div class="loader"></div>
+        </div>        
         <header class="app-header">
             <div class="app-header-left">
                 <span class="app-icon"><img src="../assets/pucbet-logo.png" class="logoPucBet"></span>
             </div>
-            <!-- Barra de Pesquisa Centralizada -->
-            <div class="app-header-center">
-                <input type="text" class="search-input" id="searchBar" placeholder="Pesquisar eventos..." oninput="searchEvents()">
-                <button class="search-btn"><i class="fa fa-search"></i></button>
-            </div>
+            
             <!-- Balance do user -->
             <div class="app-header-right"> 
                 <button type="button" class="fas fa-eye" id="showHideBalance"></button>
@@ -43,16 +42,16 @@
                     Evaluate Event
                 </a>
                 <a href="#" class="app-sidebar-link">
-                    <i class="fa fa-chart-bar"></i>
-                    Finish Event
-                </a>
-                <a href="#" class="app-sidebar-link">
-                    <i class="fa fa-cogs"></i>
+                    <i class="fa fa-calendar-days"></i>
                     My Events
                 </a>
                 <a href="../view/myWallet.html" class="app-sidebar-link">
-                    <i class="fa fa-cogs"></i>
+                    <i class="fa fa-wallet"></i>
                     My Wallet
+                </a>
+                <a href="#" class="app-sidebar-link">
+                    <i class="fa fa-chart-bar"></i>
+                    Finish Event
                 </a>
                 <a href="#" class="app-sidebar-link">
                     <i class="fa fa-sign-out-alt"></i>
@@ -163,10 +162,10 @@
                     </div>
         
                     <div class="modal-footer">
-                        <button type="button" onclick="hideModal()" class="cancelBtn">
+                        <button type="button" onclick="hideModal()" class="cancelBtn" id="cancelBtn">
                                 Cancel
                         </button>
-                        <button type="button" onclick="evaluateEvent()" class="evaluateBtn">
+                        <button type="button" onclick="evaluateEvent()" class="evaluateBtn" id="evaluateBtn">
                                 Evaluate
                         </button>
                     </div>
@@ -174,7 +173,8 @@
             </form>
         </div>
     </div>
-    <script>
+    <script async defer>
+        const loader = document.getElementById('loader-container');
         var modal = document.getElementById('modalId');
 
         function toggleReason() {
@@ -214,6 +214,9 @@
         // Função principal
         async function evaluateEvent() {
             try {
+                loader.classList.add('active');
+                document.getElementById("evaluateBtn").disabled = true;
+                document.getElementById("cancelBtn").disabled = true;
                 const reqHeaders = initializeHeaders();
                 const idEvent = getInputValueById('id_event');
                 reqHeaders.append('eventId', idEvent);
@@ -252,6 +255,11 @@
                 }
             } catch (error) {
                 console.error(error);
+            } finally {
+                // Sempre oculta o loader e reativa os botões
+                loader.classList.remove('active');
+                document.getElementById("evaluateBtn").disabled = false;
+                document.getElementById("cancelBtn").disabled = false;
             }
         }
 
